namespace/voip/k8s_asterisk/asterisk-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: asterisk-service
  namespace: voip
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  selector:
    app: asterisk
  type: NodePort 
  ports:   
  - name: sip
    port: 5060
    targetPort: 5060
    nodePort: 30061 
    protocol: TCP
  - name: ami
    port: 5038
    targetPort: 5038
    nodePort: 30062
    protocol: TCP
  externalIPs:
    - 172.16.8.11
    - 172.16.8.10
    - 172.16.8.12
    - 172.16.8.13
